# wayfire

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO  config.h.in  meson.build  meson_options.txt  uncrustify.ini  wayfire.ini  wayfire.ini.default  wayfire.ini.in
plugins/: .ycm_extra_conf.py  CMakeLists.txt  meson.build
plugins/animate/: .tags  CMakeLists.txt  animate.cpp  animate.hpp  basic_animations.hpp  fade.cpp  fade.hpp  fire.cpp  fire.hpp  meson.build  particle.cpp  particle.hpp  system_fade.hpp  unmapped-view-node.hpp
plugins/backlight/: CMakeLists.txt  backlight.cpp  intel-util.cpp
plugins/blur/: blur-base.cpp  blur.cpp  blur.hpp  bokeh.cpp  box.cpp  gaussian.cpp  kawase.cpp  meson.build
plugins/common/: cairo-util.hpp  geometry-animation.hpp  meson.build  preview-indication.hpp
plugins/cube/: CMakeLists.txt  cube-background.hpp  cube-control-signal.hpp  cube.cpp  cube.hpp  cubemap-vertex-data.hpp  cubemap.cpp  cubemap.hpp  meson.build  shaders-3-2.tpp  shaders.tpp  simple-background.cpp  simple-background.hpp  skydome.cpp  skydome.hpp
plugins/decor/: cairo-util.hpp  deco-button.cpp  deco-button.hpp  deco-layout.cpp  deco-layout.hpp  deco-subsurface.cpp  deco-subsurface.hpp  deco-theme.cpp  deco-theme.hpp  decoration.cpp  meson.build
plugins/grid/: grid.cpp  meson.build
plugins/ipc/: demo-ipc.cpp  ipc-activator.hpp  ipc-helpers.hpp  ipc-method-repository.hpp  ipc.cpp  ipc.hpp  meson.build  stipc.cpp
plugins/matcher/: matcher-ast.cpp  matcher-ast.hpp  matcher.cpp  matcher.hpp  meson.build
plugins/protocols/: foreign-toplevel.cpp  gtk-shell.cpp  gtk-shell.hpp  meson.build  shortcuts-inhibit.cpp  wayfire-shell.cpp  xdg-activation.cpp
plugins/scale/: meson.build  scale-overview.cpp  scale-title-filter.cpp  scale-title-overlay.cpp  scale-title-overlay.hpp  scale.cpp  scale.hpp
plugins/single_plugins/: .tags  CMakeLists.txt  alpha.cpp  apps-logger.cpp  autostart.cpp  center-view.cpp  command.cpp  compositor-view-test.cpp  debug-tools.cpp  expo.cpp  extra-gestures.cpp  fast-switcher.cpp  fisheye.cpp  grid.cpp  idle-inhibit.cpp  idle.cpp  invert.cpp  ipc-rules.cpp  meson.build  move-snap-helper.hpp  move.cpp  oswitch.cpp  place.cpp  png.hpp  preserve-output.cpp  resize.cpp  rotator.cpp  scale.cpp  screenshot.cpp  snap_signal.hpp  switcher.cpp  test.cpp  view-change-viewport-signal.hpp  viewport-impl.cpp  vswipe-processing.hpp  vswipe.cpp  vswitch.cpp  window-rules.cpp  wlr-workspaces.cpp  wm-actions.cpp  (+4 more)
plugins/tile/: CMakeLists.txt  meson.build  tile-plugin.cpp  tile.cpp  tree-controller.cpp  tree-controller.hpp  tree-definition.hpp  tree.cpp  tree.hpp
plugins/vkeyboard/: CMakeLists.txt  vkeyboard.cpp
plugins/vswitch/: vswitch.cpp
plugins/window-rules/: lambda-rules-registration.hpp  meson.build  view-action-interface.cpp  view-action-interface.hpp  window-rules.cpp
plugins/wm-actions/: meson.build  wm-actions-signals.hpp  wm-actions.cpp
plugins/wobbly/: meson.build  wobbly-signal.hpp  wobbly.c  wobbly.cpp  wobbly.h
proto/: CMakeLists.txt  create_protos.sh  meson.build  wayfire-shell.xml
shared/: CMakeLists.txt  config.cpp  config.hpp  meson.build
shell/: CMakeLists.txt  background.cpp  background.hpp  common.cpp  common.hpp  compile.sh  egl-surface.cpp  gamma.cpp  gamma.hpp  main.cpp  meson.build  net.cpp  net.hpp  panel.cpp  panel.hpp  shm-surface.cpp  sound-popup.cpp  vkeyboard.cpp  vkeyboard.hpp  widgets.cpp  widgets.hpp  window.cpp  window.hpp
shell/background/: background.cpp  meson.build
shell/panel/: main.cpp  meson.build  net.cpp  net.hpp  panel.cpp  panel.hpp  widgets.cpp  widgets.hpp
shell/wfwindowutil/: meson.build  shm-surface.cpp  shm-surface.hpp  window.cpp  window.hpp
src/: .tags  CMakeLists.txt  commonincludes.hpp  config.cpp  config.hpp  core.cpp  core.hpp  debug-func.hpp  debug.cpp  debug.hpp  default-config-backend.cpp  desktop-api.hpp  desktop_api.hpp  geometry.cpp  img.cpp  img.hpp  input-manager.hpp  ipc.cpp  jpeg.hpp  main.cpp  main.hpp  meson.build  opengl.cpp  opengl.hpp  output.cpp  output.hpp  plugin.cpp  plugin.hpp  region.cpp  signal_definitions.hpp  util.cpp  view-3d.cpp  view.cpp  view.hpp  weston-backend.hpp  weston_backend.hpp  wl-listener-wrapper.tpp  wm.cpp  wm.hpp  xwayland.hpp
src/api/: bindings.hpp  compositor-surface.hpp  compositor-view.hpp  core.hpp  debug.hpp  decorator.hpp  geometry.hpp  img.hpp  input-device.hpp  object.hpp  opengl.hpp  option-wrapper.hpp  output-layout.hpp  output.hpp  plugin.hpp  render-manager.hpp  signal-definitions.hpp  singleton-plugin.hpp  surface.hpp  util.hpp  view-transform.hpp  view.hpp  workspace-manager.hpp  workspace-stream.hpp
src/core/: core-impl.hpp  core.cpp  gldebug.hpp  idle.cpp  img.cpp  matcher.cpp  object.cpp  opengl-priv.hpp  opengl.cpp  output-layout.cpp  plugin-loader.cpp  plugin-loader.hpp  plugin.cpp  scene-priv.hpp  scene.cpp  shaders.tpp  view-access-interface.cpp  window-manager.cpp  wm.cpp  wm.hpp
src/ipc/: ipc-view.cpp  ipc-view.hpp  ipc.cpp  ipc.hpp
src/output/: gtk-shell.cpp  gtk-shell.hpp  output-impl.hpp  output.cpp  plugin-loader.cpp  plugin-loader.hpp  promotion-manager.hpp  render-manager.cpp  wayfire-shell.cpp  wayfire-shell.hpp  workarea.cpp  workspace-impl.cpp  workspace-stream.cpp
src/pch/: pch.h
src/view/: compositor-view.cpp  instruction-impl.hpp  layer-shell.cpp  priv-view.hpp  subsurface.cpp  subsurface.hpp  surface-impl.hpp  surface-lock.cpp  surface-node.cpp  surface-pointer-interaction.cpp  surface-root-node.cpp  surface-touch-interaction.cpp  surface.cpp  toplevel-node.cpp  toplevel-node.hpp  toplevel-view.cpp  toplevel.cpp  translation-node.cpp  view-3d.cpp  view-impl.cpp  view-impl.hpp  view-keyboard-interaction.cpp  view-keyboard-interaction.hpp  view-node.cpp  view-pointer-interaction.cpp  view-util.cpp  view.cpp  wlr-desktop-surface.cpp  wlr-desktop-surface.hpp  wlr-surface-node.cpp  wlr-surface-node.hpp  wlr-surface-touch-interaction.cpp  (+7 more)
test/: meson.build  mock-core.cpp  mock-core.hpp  mock-util-test.cpp  mock-util.cpp  mock.hpp  stub.h
(+240 files in other folders)
