option('enable_gles32', type: 'boolean', value: true, description: 'Enable usage of GLES 3.2')
option('enable_debug_output', type: 'boolean', value: false, description: 'Enable debug messages')
option('enable_graphics_debug', type: 'boolean', value: false, description: 'Enable debug graphics overlays')
option('use_system_wfconfig', type: 'feature', value: 'auto', description: 'Use the system-wide installation of wf-config')
